...
                                        <connections>
                                            <segue destination="Xbd-xS-h7J" kind="show" id="aPw-NG-iu0"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yGQ-wa-M7o">
                                        <rect key="frame" x="0.0" y="60" width="314" height="40"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <segue destination="3v0-Gc-DWW" kind="show" id="WHM-LA-IJR"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="OQg-im-CWB">
                                <rect key="frame" x="50" y="114" width="314" height="230.5"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q7q-cq-QFe">
                                        <rect key="frame" x="0.0" y="0.0" width="314" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="bgK-gn-3Zr"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mkS-1T-Ewg">
                                        <rect key="frame" x="0.0" y="70" width="314" height="50"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="niP-Sl-lWK">
...
